# Fast-Slow-Systems

./: README.md
CCode/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  basinOfAttraction  cmake_install.cmake  compile_commands.json
CCode/inc/: newtonsMethodForQuadraticSystem.h
CCode/inc/core/: outputJson.h  rk45.h  systems.h
CCode/src/VDPpoincare/: makeBifurcationDiagram.c  plotPoincare.py  poincare.json  vanDerPolPoincare.c
CCode/src/core/: outputJson.c  rk45.c  systems.c
CCode/src/core/parson/: parson.c
CCode/src/testResults/: maxes.json  maxes2.json  maxes3.json  maxes_zoom15point2185.json  plotResults.py
CCode/src/tests/: testQuadratic.c  testVanDerPol.c
CCode/src/variationalPoincare/: basinOfAttraction.c  newtonsMethodForQuadraticSystem.c  newtonsMethodForQuadraticSystemMain.c  onePeriod.c  quadratic.c
CCode/src/variationalPoincare/output/: basin.json  plotOutput.py  square.json
Mathematica/: 1D Systems with Periodic Forcing.nb  2D Linear System.nb  Dynamic Hopf Bifurcation.nb  Fast Slow Van Der Pol System.nb  Hopf Normal Form.nb  Van Der Pol Periodic.nb
